--- a/MyBoards/appsettings.Development.json
+++ b/MyBoards/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MyBoardsConnectionString": "Server=(localdb)\\mssqllocaldb;Database=MyBoardsDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,3 +9,7 @@
     }
   }
 }
+
+        
+            
+        
